--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -906,7 +906,7 @@ h5#current-page-title {
   background: #222f54;
   border-radius: 2px;
   -webkit-appearance: none;
-  outline: none;
+  outline: none !important;
 }
 
 .bg-section input[type="range"]::-webkit-slider-thumb {
@@ -916,13 +916,13 @@ h5#current-page-title {
   background: #222f54;
   border-radius: 50%;
   cursor: pointer;
-  border: none;
-}
-
-.bg-section input:focus {
-  outline: none !important;
   border: none !important;
 }
+
+/* .bg-section input:focus {
+  outline: none !important;
+  border: none !important;
+} */
 
 .bg-section .value-display {
   color: #333;
@@ -1042,12 +1042,22 @@ h5#current-page-title {
 }
 
 .call-to-action-item {
-  align-content: center;
-  align-self: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 40px;
   width: 40px;
   background-color: #e9e9e9;
   border-radius: 100%;
+}
+
+.call-to-action-item svg {
+  height: 16px;
+  width: 16px;
+}
+
+.call-to-action-item svg path {
+  fill: #747474;
 }
 
 .call-to-action-item:hover {
