--- a/src/css/toolbox.css
+++ b/src/css/toolbox.css
@@ -138,7 +138,7 @@ button {
 .template-block {
   border: 2px dashed #4c53577d;
   border-radius: 8px;
-  height: 4.5rem;
+  height: 5rem;
   padding: 0.4rem;
   background-color: transparent;
   display: flex;
@@ -244,7 +244,7 @@ button {
 .content-page-wrapper {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 25px;
 }
 
 #product-service-image {
@@ -383,7 +383,6 @@ button {
   justify-content: center;
   flex-direction: row;
   flex-wrap: wrap;
-  gap: 1rem;
 }
 
 .cta-main-button {
@@ -426,7 +425,6 @@ button {
   display: flex;
   flex-direction: column;
   margin: 0.5rem;
-  margin-right: 1.1rem;
   text-transform: uppercase;
 }
 
