--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -2057,9 +2057,13 @@ button.add-new-service i {
   cursor: pointer;
   display: flex;
   align-items: center;
+  width: 40px;
+  height: 40px;
 }
 .menu-button:hover {
   background-color: #5068A8;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+
 }
 .menu-button:hover .icon-path {
   fill: #fff;
@@ -2084,6 +2088,7 @@ button.add-new-service i {
   padding: 10px;
   cursor: pointer;
   white-space: nowrap;
+  border-bottom: 1px #ccc solid;
 }
 .menu-item:hover {
   background-color: #eee;
