--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -2088,6 +2088,7 @@ button.add-new-service i {
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
   overflow: hidden;
+  z-index: 100;
 }
 .menu.show {
   display: block;
