--- a/src/css/toolbox.css
+++ b/src/css/toolbox.css
@@ -119,7 +119,29 @@ button {
   gap: 0.5rem;
   width: 100%;
   flex-wrap: nowrap;
+  position: relative;
   box-sizing: border-box; /* Ensure no wrapping */
+}
+
+.container-row .tb-add-new-info-section {
+  position: absolute;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  height: 26px !important;
+  width: 26px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 14px;
+  padding: 4px;
+  border: 1px solid #5068a8;
+  border-radius: 50%;
+  background-color: white;
+  z-index: 1;
+}
+
+.container-row:hover .tb-add-new-info-section {
+  display: flex;
 }
 
 .container-column .container-row:empty {
@@ -284,7 +306,8 @@ button {
   display: block;
 }
 
-.template-wrapper:hover .add-button-right {
+.template-wrapper:hover .add-button-right
+ {
   display: flex;
 }
 
@@ -1088,6 +1111,50 @@ img.content-page-block {
   fill: #fff;
 }
 
+.tb-add-new-info-section{
+  position: absolute;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  height: 26px;
+  width: 26px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 14px;
+  padding: 4px;
+  border: 1px solid #5068a8;
+  border-radius: 50%;
+  background-color: white;
+}
+
+.tb-add-new-info-section hr {
+  border-top: 1.5px dashed #c0c0c0;
+  position: absolute;
+  top: 46%;
+  width: 100%;
+  height: 1px;
+  padding: 0;
+  margin: 0;
+}
+
+.tb-add-new-info-section svg {
+  position: absolute;
+  left: calc(50% - 15px);
+}
+
+.tb-add-new-info-section svg:hover {
+  cursor: pointer;
+}
+
+.tb-add-new-info-section svg:hover g {
+  fill: #5068a8;
+  stroke: #5068a8;
+}
+
+.tb-add-new-info-section svg:hover path {
+  fill: #fff;
+}
+
 .default-section-image {
   border: 1px dashed #222f54;
 }
@@ -1121,6 +1188,7 @@ img.content-page-block {
 }
 
 .info-image-section:hover .tb-delete-image-icon,
+.info-image-section:hover .tb-add-new-info-section,
 .info-image-section:hover .tb-edit-image-icon {
   display: flex !important;
 }
@@ -1140,6 +1208,7 @@ img.content-page-block {
 }
 
 .info-desc-section:hover .tb-edit-content-icon,
+.info-desc-section:hover .tb-add-new-info-section,
 .info-desc-section:hover .tb-delete-image-icon {
   display: flex;
 }
