--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1640,17 +1640,38 @@ div#cta-selected-actions {
   border-radius: 8px;
   /* overflow: hidden; */
   cursor: pointer;
-  transition: border 0.3s ease;
+  /* transition: border 0.3s ease; */
+}
+.file-item::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 30%; /* Adjust the height of the gradient */
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.7), transparent); /* Dark grey gradient */
+  pointer-events: none; /* Ensure the gradient does not interfere with interactions */
+  z-index: 1; /* Place the gradient above the image */
+  opacity: 0; /* Initially hidden */
+  transition: opacity 0.3s ease; /* Smooth fade-in effect */
+}
+
+.file-item:hover::after {
+  opacity: 1; /* Show the gradient on hover */
 }
 .action-column {
   display: flex;
   flex-direction: column; /* Stack items vertically */
-  align-items: right; /* Center items horizontally */
-  position: absolute;
-  top: 10px; /* Adjust position relative to the container */
-  right: 10px; /* Adjust position relative to the container */
-  gap: 5px; /* Add spacing between statusCheck and deleteSpan */
-  margin-left: 10px;
+  position: absolute; /* Position the action-column over the image */
+  top: 50%; /* Center vertically */
+  left: 50%; /* Center horizontally */
+  transform: translate(-50%, -50%); /* Adjust for centering */
+  gap: 10px; /* Add spacing between buttons */
+  z-index: 2; /* Ensure the action-column is above the image */
+  opacity: 0; /* Initially hidden */
+  transition: opacity 0.3s ease; /* Smooth fade-in effect */
+  margin-top: 15px;
+  margin-left: 25px;
 }
 .delete-media:hover {
   color: darkred; /* Darker red on hover */
@@ -1663,6 +1684,9 @@ div#cta-selected-actions {
 
 .file-item:hover .action-buttons {
   opacity: 1; /* Show buttons on hover */
+}
+.file-item:hover .action-column {
+  opacity: 1; /* Show the action-column on hover */
 }
 
 .file-item .action-button {
@@ -1687,10 +1711,13 @@ div#cta-selected-actions {
 .file-item .delete-button:hover {
   background-color: #dc3545; /* Red background for delete button */
 }
-
+/* .file-item .delete-media:focus {
+  color: red; 
+  outline: none; 
+} */
 .file-item img {
-  height: 100px;
-  width: 100px;
+  height: 110px;
+  width: 110px;
   margin-right: 10px;
   object-fit: cover;
 }
@@ -1713,10 +1740,13 @@ div#cta-selected-actions {
 }
 
 .file-item .delete-media {
-  font-size: 16px;
-  color: #a00c0c;
-  opacity: 0;
+  font-size: 20px;
+  color: #ffffff;
+  opacity: 0; 
   cursor: pointer;
+  margin-top: 40px;
+  transition: color 0.3s ease, background-color 0.3s ease; /* Smooth transition */
+
 }
 
 .file-info .file-info-details {
