--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1662,12 +1662,12 @@ div#cta-selected-actions {
 }
 .action-column {
   display: flex;
-  flex-direction: column; /* Stack items vertically */
+  flex-direction: row; /* Stack items vertically */
   align-items: right; /* Center items horizontally */
   position: absolute;
-  top: 10px; /* Adjust position relative to the container */
-  right: 10px; /* Adjust position relative to the container */
-  gap: 5px; /* Add spacing between statusCheck and deleteSpan */
+  top: 80px; /* Adjust position relative to the container */
+  right: 25px; /* Adjust position relative to the container */
+  gap: 30px; /* Add spacing between statusCheck and deleteSpan */
   margin-left: 10px;
 }
 .delete-media:hover {
@@ -1718,9 +1718,9 @@ div#cta-selected-actions {
 }
 
 .file-item img {
-  height: 200px;
-  width: 200px;
-  margin-right: 10px;
+  height: 110px;
+  width: 110px;
+  margin-right: 5px;
   object-fit: cover;
 }
 
@@ -1741,9 +1741,9 @@ div#cta-selected-actions {
 }
 
 .file-item .delete-media {
-  font-size: 16px;
-  color: #a00c0c;
-  opacity: 0;
+  font-size: 20px;
+  color: #eaeaebe2;
+  opacity: 1;
   cursor: pointer;
 }
 
@@ -1790,6 +1790,13 @@ div#cta-selected-actions {
   display: none;
   justify-content: flex-end;
   gap: 1em;
+}
+
+.modal-actions-slider {
+  margin-top: 20px;
+  display: flex; /* Ensure flexbox layout */
+  justify-content: flex-end; /* Align items to the right */
+  gap: 1em; /* Add spacing between child elements */
 }
 
 /* popup */
@@ -3110,7 +3117,7 @@ input[type="range"]::-webkit-slider-thumb {
 }
 .file-list {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); /* Responsive grid */
+  grid-template-columns: repeat(auto-fill, minmax(135px, 1fr)); /* Responsive grid */
   gap: 10px; /* Spacing between images */
   padding: 10px;
 }
@@ -3377,16 +3384,6 @@ input[type="range"]::-webkit-slider-thumb {
   background-color: rgba(0,0,0,0.8);
 }
 
-/* Caption text */
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-}
 
 /* Number text (1/3 etc) */
 .numbertext {
@@ -3396,23 +3393,6 @@ input[type="range"]::-webkit-slider-thumb {
   position: absolute;
   top: 0;
 }
-
-/* The dots/bullets/indicators */
-.dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-
-.active, .dot:hover {
-  background-color: #717171;
-}
-
 /* Fading animation */
 .fade {
   animation-name: fade;
