--- a/public/css/toolbox.css
+++ b/public/css/toolbox.css
@@ -170,10 +170,7 @@ button {
   display: flex;
   flex-direction: column;
   transition: border-color 0.2s ease, box-shadow 0.2s ease;
-}
-
-.template-block:hover {
-  /* cursor: move; */
+  cursor: pointer;
 }
 
 /* .high-priority-template {
@@ -224,7 +221,7 @@ button {
 
 .content-page-block:hover {
   border: 2px dashed #5068a8;
-  cursor: move;
+  cursor: text;
   padding: 0px;
 }
 
@@ -622,7 +619,7 @@ img.content-page-block {
 .img-button-container:hover,
 .plain-button-container:hover,
 .cta-container-child:hover {
-  cursor: move;
+  cursor: pointer;
 }
 
 .cta-label {
@@ -692,7 +689,7 @@ img.content-page-block {
 }
 
 .plain-button:hover {
-  cursor: move;
+  cursor: pointer;
 }
 
 .img-button-section {
@@ -922,7 +919,7 @@ img.content-page-block {
 }
 
 .content-image:hover {
-  cursor: move;
+  cursor: default;
 }
 
 /* menu container */
@@ -1107,12 +1104,24 @@ img.content-page-block {
   display: none;
 }
 
-.add-new-info-section {
+/* .add-new-info-section {
   position: relative;
   text-align: center;
   vertical-align: middle;
   min-height: 30px;
   margin-top: 20px;
+  width: 100%;
+} */
+
+.add-new-info-section {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 3rem;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    pointer-events: none;
 }
 
 .add-new-info-section hr {
@@ -1194,7 +1203,7 @@ img.content-page-block {
 .container-column-info {
   display: flex;
   /* flex-direction: column; */
-  gap: 0.8rem;
+  /* gap: 0.8rem; */
   justify-content: center;
   flex-flow: wrap;
 }
@@ -1213,6 +1222,45 @@ img.content-page-block {
   object-fit: cover;
   display: block;
   border: 1px dashed #222f54;
+}
+
+.info-section-spacing-container {
+  width: 100%;
+  height: 0.8rem;
+  transition: height 0.3s ease;
+  position: relative;
+  overflow: hidden;
+}
+
+.info-section-spacing-container.first-section {
+  margin-top: -0.8rem;
+}
+
+.content-frame-container.empty-state .info-section-spacing-container.blank-page {
+    height: 2rem;
+    height: 4rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.untitled-page .add-new-info-section {
+  opacity: 0 !important;
+  pointer-events: none !important;
+}
+
+.content-frame-container.empty-state:hover .add-new-info-section {
+    opacity: 1;
+    pointer-events: auto;
+}
+
+.info-section-spacing-container:hover {
+    height: 3.2rem;
+}
+
+.info-section-spacing-container:hover .add-new-info-section {
+    opacity: 1;
+    pointer-events: auto;
 }
 
 .info-image-section {
@@ -1246,8 +1294,6 @@ img.content-page-block {
   display: flex;
 }
 
-
-
 .info-desc-section .info-desc-content {
   padding: 2px;
 }
@@ -1258,7 +1304,7 @@ img.content-page-block {
 
 .container-column-info .info-desc-content:hover,
 .container-column-info .info-image-section:hover {
-  cursor: move;
+  cursor: default;
 }
 
 [data-gjs-type="info-cta-section"].gjs-selected .tile-open-menu {
