--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -12,7 +12,7 @@
   margin-top: -20px;
   margin-right: -20px;
 }
-#tb-body input:focus {
+#tb-body input:not([type="range"]):focus {
   outline: 1px solid #b4b9bd !important;
   border: 1px solid #b4b9bd !important;
 }
@@ -69,9 +69,9 @@
 }
 
 .tb-icon-button {
-  margin-right: 10px; 
-  margin-top: 10px; 
-  border:none; 
+  margin-right: 10px;
+  margin-top: 10px;
+  border: none;
   background: transparent;
 }
 
@@ -200,13 +200,13 @@ button#open-mapping {
   /* position: fixed; */
 }
 
-.editor-main-section{
+.editor-main-section {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100%;
-  overflow:hiden;
+  overflow: hiden;
 }
 
 .frame-list {
@@ -542,7 +542,8 @@ span#scroll-right:hover {
   font-size: 14px;
 }
 
-.form-field #field_value, .form-field #field_label {
+.form-field #field_value,
+.form-field #field_label {
   margin-top: 0;
 }
 
@@ -590,7 +591,7 @@ span#scroll-right:hover {
 
 .version-select-button {
   padding: 12px 12px;
-  margin-top: 12px; 
+  margin-top: 12px;
   margin-bottom: 12px;
   background-color: #222f54;
   color: white;
@@ -623,8 +624,8 @@ span#scroll-right:hover {
   content: "";
   width: 6px;
   height: 6px;
-  border-right: 1.5px solid #6C757D;
-  border-bottom: 1.5px solid #6C757D;
+  border-right: 1.5px solid #6c757d;
+  border-bottom: 1.5px solid #6c757d;
   transform: rotate(45deg);
   transition: transform 0.2s;
 }
@@ -675,7 +676,7 @@ span#scroll-right:hover {
   /* overflow-y: auto; */
   scrollbar-width: thin;
   scrollbar-color: #888 #f1f1f1;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
   display: none;
   z-index: 1000;
 }
@@ -727,13 +728,13 @@ span#scroll-right:hover {
 .theme-option.submenu > .submenu-list {
   display: none;
   /* display: block; */
-  position:absolute;
+  position: absolute;
   left: 100%;
   margin-top: 66px;
   /* top: 0; */
   background-color: white;
   border-radius: 6px;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
   min-width: 160px;
   z-index: 1001;
 }
@@ -1014,7 +1015,7 @@ h5#current-page-title {
 
 .sidebar-section.theme-section {
   padding-bottom: 0;
-}   
+}
 
 .color-palette {
   display: flex;
@@ -1080,7 +1081,7 @@ h5#current-page-title {
 
 .tile-img-section {
   display: flex;
-  gap: 0.6rem;
+  gap: 1rem;
   width: 100%;
   justify-content: space-between;
 }
@@ -1197,7 +1198,7 @@ h5#current-page-title {
 }
 
 .tile-img-container:hover svg {
-  stroke: #5068A8;
+  stroke: #5068a8;
 }
 
 .tile-img-container img {
@@ -1519,9 +1520,7 @@ div#cta-selected-actions {
   font-weight: 500;
   text-transform: uppercase;
   border-radius: 4px;
-  transition:
-    background-color 0.3s,
-    color 0.3s;
+  transition: background-color 0.3s, color 0.3s;
 }
 
 .tb-tabs .tb-tab-button:hover {
@@ -1590,8 +1589,8 @@ div#cta-selected-actions {
   width: 815px;
   min-height: 600px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  max-height: 90vh;         /* Add this */
-  overflow-y: auto;         /* Add this */
+  max-height: 90vh; /* Add this */
+  overflow-y: auto; /* Add this */
   display: flex;
   flex-direction: column;
 }
@@ -1628,13 +1627,13 @@ div#cta-selected-actions {
 .image-editor-container img {
   width: 100%;
   height: 100%;
-  object-fit: cover;      /* Ensures the image covers the container */
+  object-fit: cover; /* Ensures the image covers the container */
   position: absolute;
   top: 0;
   left: 0;
   border-radius: 8px;
-  margin-bottom: 0;       /* Remove margin if present */
-  transform: none;        /* Remove translate if present */
+  margin-bottom: 0; /* Remove margin if present */
+  transform: none; /* Remove translate if present */
 }
 
 .upload-area p {
@@ -1683,7 +1682,11 @@ div#cta-selected-actions {
   left: 0;
   width: 100%;
   height: 30%; /* Adjust the height of the gradient */
-  background: linear-gradient(to top, rgba(0, 0, 0, 0.7), transparent); /* Dark grey gradient */
+  background: linear-gradient(
+    to top,
+    rgba(0, 0, 0, 0.7),
+    transparent
+  ); /* Dark grey gradient */
   pointer-events: none; /* Ensure the gradient does not interfere with interactions */
   z-index: 1; /* Place the gradient above the image */
   opacity: 0; /* Initially hidden */
@@ -1787,7 +1790,7 @@ div#cta-selected-actions {
 .file-item .delete-media {
   font-size: 20px;
   color: #ffffff;
-  opacity: 0; 
+  opacity: 0;
   cursor: pointer;
   margin-top: 40px;
   transition: color 0.3s ease, background-color 0.3s ease; /* Smooth transition */
@@ -1966,9 +1969,7 @@ div#cta-selected-actions {
   color: #333;
   cursor: pointer;
   text-align: center;
-  transition:
-    background-color 0.3s,
-    box-shadow 0.3s;
+  transition: background-color 0.3s, box-shadow 0.3s;
 }
 
 .context-menu ul li:hover {
@@ -2637,9 +2638,7 @@ details .tb_debug_details-content {
   z-index: 9;
   opacity: 0;
   visibility: hidden;
-  transition:
-    opacity 0.2s,
-    visibility 0.2s;
+  transition: opacity 0.2s, visibility 0.2s;
   border-radius: 9px;
   margin-bottom: 10px;
   width: 180px;
@@ -2677,9 +2676,7 @@ details .tb_debug_details-content {
   cursor: pointer;
   z-index: 10;
   color: #303030;
-  transition:
-    opacity 0.2s,
-    visibility 0.2s;
+  transition: opacity 0.2s, visibility 0.2s;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -2884,7 +2881,7 @@ details .tb_debug_details-content {
 
 .link {
   fill: none;
-  stroke: #FFFFFF;
+  stroke: #ffffff;
   stroke-width: 1.5px;
   stroke-dasharray: 5, 5;
   marker-end: url(#arrowhead);
@@ -3066,7 +3063,7 @@ details .tb_debug_details-content {
   padding: 20px;
   border-radius: 10px;
   text-align: center;
- }
+}
 canvas {
   max-width: 100%;
   border: 1px solid #ccc;
@@ -3087,17 +3084,17 @@ canvas {
   justify-content: center;
   align-items: center;
   position: relative; /* Ensure absolute children are relative to this */
-  height: 400px;      /* Or your preferred fixed height */
+  height: 400px; /* Or your preferred fixed height */
 }
 /* Reduce cropper frame height */
 .crop-frame {
   min-width: 80px;
   min-height: 80px;
-  height: 180px;         /* Reduced height */
-  border: 2px dashed #5068A8;
+  height: 180px; /* Reduced height */
+  border: 2px dashed #5068a8;
   position: absolute;
   box-sizing: border-box;
-  cursor: move;          /* Default cursor for moving */
+  cursor: move; /* Default cursor for moving */
 }
 
 /* Edge handles for resizing */
@@ -3105,7 +3102,7 @@ canvas {
   position: absolute;
   width: 12px;
   height: 12px;
-  background: #5068A8;
+  background: #5068a8;
   border-radius: 50%;
   z-index: 10;
 }
@@ -3143,7 +3140,7 @@ canvas {
   margin-bottom: 40px;
   margin-top: 20px;
 }
-.modal-footer-buttons{
+.modal-footer-buttons {
   display: flex;
   align-items: right;
   width: 100%;
@@ -3173,7 +3170,6 @@ canvas {
   border: 1px solid #ccc;
   color: #333;
 }
-
 
 /* Style the slider track */
 input[type="range"] {
@@ -3317,7 +3313,7 @@ input[type="range"]::-webkit-slider-thumb {
 }
 
 .trash-tab.active::after {
-  content: '';
+  content: "";
   position: absolute;
   bottom: 0;
   left: 0;
